# modbus-cpp-rust-interop

./: README.md
cpp/: CMakeLists.txt  main.cpp
rs/: Cargo.toml  build.rs
rs/src/: lib.rs
